--- a/src/app/pages/collection/list/list.component.scss
+++ b/src/app/pages/collection/list/list.component.scss
@@ -24,12 +24,13 @@ ul {
   background-color: inherit;
   border: none;
   color: white;
+  width: 100%;
+  height: 100%;
 }
 
 .list-content {
   display: flex;
   flex-direction: row;
-  width: 280px;
 }
 
 .align-right {
